--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     border: 0px;
-    background-color: var(--primaryContrast);
+    background-color: var(--primary);
 }
 input:focus,
 select:focus,
