Added Navbar and updates to styling

--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -13,7 +13,7 @@
             <div *ngFor="let movie of movies">
                 <div class="movie">
                     <div class="info">
-                        <img [src]="movie.backdrop_path" alt="backdrop">
+                        <img [src]="movie.backdrop_path" alt="Movie Backdrop Image" srcset="">
                         <p>{{ movie.title }}</p>
                         <p class="overview">{{ movie.overview }}</p>
                     </div>
