added child components and updated styling

--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,24 +1,12 @@
 <div class="contentWrapper">
-    <div class="flexColumn">
-        <form class="flexRow" [formGroup]="searchForm">
-            <mat-form-field appearance="standard" color="accent">
-                <mat-label>Search...</mat-label>
-                <input matInput type="text" formControlName="search">
-            </mat-form-field>
-            <button mat-button type="submit" color="accent" (click)="search()">
-                <mat-icon>search</mat-icon>
-            </button>
-        </form>
-        <div class="movies">
-            <div *ngFor="let movie of movies">
-                <div class="movie">
-                    <div class="info">
-                        <img [src]="movie.backdrop_path" alt="Movie Backdrop Image" srcset="">
-                        <p>{{ movie.title }}</p>
-                        <p class="overview">{{ movie.overview }}</p>
-                    </div>
-                </div>
-            </div>
+    <div>
+        <app-search (valueEvent)="search($event)"></app-search>
+        <div class="tile-grid">
+            <app-tile *ngFor="let movie of movies"
+                [id]="movie.id"
+                [backdrop_path]="movie.backdrop_path"
+                [title]="movie.title"
+                [overview]="movie.overview"></app-tile>
         </div>
     </div>
 </div>
