--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav>
     <button mat-button color="primary" routerLink="movies"><a>Movies</a></button>
     <button mat-button color="primary" routerLink="tv-shows"><a>TV Shows</a></button>
-    <p mat-button color="primary">nx-movies🎥🐱‍🏍</p>
+    <button mat-button color="primary" (click)="setup()" id="setup">
+        <mat-icon>settings</mat-icon>
+    </button>
+    <p color="primary">nx-movies🎥🐱‍🏍</p>
 </nav>
 <div class="spacer"></div>
