--- a/angular-frontend/src/app/components/detail/detail.component.html
+++ b/angular-frontend/src/app/components/detail/detail.component.html
@@ -20,7 +20,25 @@
             <p>{{ movieDetail.overview }}</p>
         </div>
     </ng-container>
-    <!-- <ng-container *ngIf="tvDetail">
-    
-        </ng-container> -->
+    <ng-container *ngIf="tvDetail">
+        <div class="header">
+            <mat-icon (click)="close()">close</mat-icon>
+            <h1>{{ tvDetail.name }}</h1>
+        </div>
+        <div class="content">
+            <img [src]="tvDetail.backdrop_path" alt="" [hidden]="!tvDetail.backdrop_path">
+            <p class="scores"><span matTooltip="Popularity">
+                    <mat-icon>insert_emoticon</mat-icon>{{ tvDetail.popularity }}
+                </span> |
+                <span matTooltip="Vote Count">
+                    <mat-icon>how_to_vote</mat-icon>{{ tvDetail.vote_count }}
+                </span> |
+                <span matTooltip="Vote Average">
+                    <mat-icon>sports_score</mat-icon>{{ tvDetail.vote_average }}
+                </span>
+            </p>
+            <h3>{{ tvDetail.tagline }}</h3>
+            <p>{{ tvDetail.overview }}</p>
+        </div>
+    </ng-container>
 </div>
