--- a/angular-frontend/src/styles.scss
+++ b/angular-frontend/src/styles.scss
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;600&display=swap');
 html,
 body {
     height: 100%;
     margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-family: 'IBM Plex Sans', Roboto, "Helvetica Neue", sans-serif;
     border: 0px;
     background-color: var(--primary);
 }
