--- a/angular-frontend/src/app/components/tile/tile.component.html
+++ b/angular-frontend/src/app/components/tile/tile.component.html
@@ -1,4 +1,4 @@
-<div class="tile">
+<div class="tile" tabindex="0" [ngClass]="animateBack ? 'prev' : 'next'">
     <div class="info">
         <img [src]="backdrop_path" alt="Backdrop Image">
         <p>{{ title }}</p>
