--- a/angular-frontend/src/styles.scss
+++ b/angular-frontend/src/styles.scss
@@ -43,6 +43,16 @@ button:focus {
     grid-column-gap: 1em;
     grid-row-gap: 1em;
 }
+@keyframes slideFromTop {
+    0% {
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
 .detailBox {
     position: fixed;
     top: 10vh;
@@ -52,6 +62,7 @@ button:focus {
     background-color: var(--primary);
     color: var(--primaryContrast);
     z-index: 100;
+    animation: 0.2s ease-in 0s slideFromTop;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
         rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     h1 {
