--- a/angular-frontend/src/app/components/paginator/paginator.component.html
+++ b/angular-frontend/src/app/components/paginator/paginator.component.html
@@ -1,6 +1,6 @@
 <div class="paginator" *ngIf="totalResults">
-    <mat-icon (click)="first()">fast_rewind</mat-icon>
-    <mat-icon (click)="previous()">skip_previous</mat-icon>
+    <mat-icon (click)="first()">skip_previous</mat-icon>
+    <mat-icon (click)="previous()">fast_rewind</mat-icon>
     <p>Page: {{ page }} of {{ totalPages }} | {{ totalResults }} results</p>
     <mat-icon (click)="next()">fast_forward</mat-icon>
     <mat-icon (click)="last()">skip_next</mat-icon>
